force-app/main/default/objects/Country_Save_State__c/Country_Save_State__c.object-meta.xml
<CustomObject>
    <label>Country Save State</label>
    <pluralLabel>Country Save States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Country Save State Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>