force-app/main/default/objects/Country_Save_State__c/fields/Active_inventions__c.field-meta.xml
<CustomField>
    <fullName>Active_inventions__c</fullName>
    <label>Active inventions</label>
    <type>Lookup</type>
    <referenceTo>Active_inventions__c</referenceTo>
    <relationshipName>Country_Save_State_Active_inventions</relationshipName>
</CustomField>