force-app/main/default/objects/Country_Save_State__c/fields/Actual_sold_domestic__c.field-meta.xml
<CustomField>
    <fullName>Actual_sold_domestic__c</fullName>
    <label>Actual sold domestic</label>
    <type>Lookup</type>
    <referenceTo>ActualSoldDomestic__c</referenceTo>
    <relationshipName>Country_Save_State_Actual_sold_domestic</relationshipName>
</CustomField>