force-app/main/default/objects/Country_Save_State__c/fields/Admin_reform__c.field-meta.xml
<CustomField>
    <fullName>Admin_reform__c</fullName>
    <label>Admin reform</label>
    <type>Text</type>
    <length>255</length>
</CustomField>