force-app/main/default/objects/Country_Save_State__c/fields/Ai__c.field-meta.xml
<CustomField>
    <fullName>Ai__c</fullName>
    <label>Ai</label>
    <type>Lookup</type>
    <referenceTo>Ai__c</referenceTo>
    <relationshipName>Country_Save_State_Ai</relationshipName>
</CustomField>