force-app/main/default/objects/Country_Save_State__c/fields/Ai_hard_strategy__c.field-meta.xml
<CustomField>
    <fullName>Ai_hard_strategy__c</fullName>
    <label>Ai hard strategy</label>
    <type>Lookup</type>
    <referenceTo>Ai_hard_strategy__c</referenceTo>
    <relationshipName>Country_Save_State_Ai_hard_strategy</relationshipName>
</CustomField>