force-app/main/default/objects/Country_Save_State__c/fields/Army_schools__c.field-meta.xml
<CustomField>
    <fullName>Army_schools__c</fullName>
    <label>Army schools</label>
    <type>Text</type>
    <length>255</length>
</CustomField>