force-app/main/default/objects/Country_Save_State__c/fields/Auto_create_leaders__c.field-meta.xml
<CustomField>
    <fullName>Auto_create_leaders__c</fullName>
    <label>Auto create leaders</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>