force-app/main/default/objects/Country_Save_State__c/fields/Badboy__c.field-meta.xml
<CustomField>
    <fullName>Badboy__c</fullName>
    <label>Badboy</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>