force-app/main/default/objects/Country_Save_State__c/fields/Ban_embassy_country__c.field-meta.xml
<CustomField>
    <fullName>Ban_embassy_country__c</fullName>
    <label>Ban embassy country</label>
    <type>Text</type>
    <length>255</length>
</CustomField>