force-app/main/default/objects/Country_Save_State__c/fields/Buy_domestic__c.field-meta.xml
<CustomField>
    <fullName>Buy_domestic__c</fullName>
    <label>Buy domestic</label>
    <type>Lookup</type>
    <referenceTo>Buy_domestic__c</referenceTo>
    <relationshipName>Country_Save_State_Buy_domestic</relationshipName>
</CustomField>