force-app/main/default/objects/Country_Save_State__c/fields/Campaign_counter__c.field-meta.xml
<CustomField>
    <fullName>Campaign_counter__c</fullName>
    <label>Campaign counter</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>