force-app/main/default/objects/Country_Save_State__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <label>Capital</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>