force-app/main/default/objects/Country_Save_State__c/fields/Civilized__c.field-meta.xml
<CustomField>
    <fullName>Civilized__c</fullName>
    <label>Civilized</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>