force-app/main/default/objects/Country_Save_State__c/fields/Colonize__c.field-meta.xml
<CustomField>
    <fullName>Colonize__c</fullName>
    <label>Colonize</label>
    <type>Lookup</type>
    <referenceTo>Colonize__c</referenceTo>
    <relationshipName>Country_Save_State_Colonize</relationshipName>
</CustomField>