force-app/main/default/objects/Country_Save_State__c/fields/Creditor__c.field-meta.xml
<CustomField>
    <fullName>Creditor__c</fullName>
    <label>Creditor</label>
    <type>Lookup</type>
    <referenceTo>Creditor__c</referenceTo>
    <relationshipName>Country_Save_State_Creditor</relationshipName>
</CustomField>