force-app/main/default/objects/Country_Save_State__c/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <label>Culture</label>
    <type>Lookup</type>
    <referenceTo>Culture__c</referenceTo>
    <relationshipName>Country_Save_State_Culture</relationshipName>
</CustomField>