force-app/main/default/objects/Country_Save_State__c/fields/Diplomatic_points__c.field-meta.xml
<CustomField>
    <fullName>Diplomatic_points__c</fullName>
    <label>Diplomatic points</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>