force-app/main/default/objects/Country_Save_State__c/fields/Discredit__c.field-meta.xml
<CustomField>
    <fullName>Discredit__c</fullName>
    <label>Discredit</label>
    <type>Text</type>
    <length>255</length>
</CustomField>