force-app/main/default/objects/Country_Save_State__c/fields/Discreditor__c.field-meta.xml
<CustomField>
    <fullName>Discreditor__c</fullName>
    <label>Discreditor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>