force-app/main/default/objects/Country_Save_State__c/fields/Domain_region__c.field-meta.xml
<CustomField>
    <fullName>Domain_region__c</fullName>
    <label>Domain region</label>
    <type>Text</type>
    <length>255</length>
</CustomField>