force-app/main/default/objects/Country_Save_State__c/fields/Domestic_demand_pool__c.field-meta.xml
<CustomField>
    <fullName>Domestic_demand_pool__c</fullName>
    <label>Domestic demand pool</label>
    <type>Lookup</type>
    <referenceTo>Domestic_demand_pool__c</referenceTo>
    <relationshipName>Country_Save_State_Domestic_demand_pool</relationshipName>
</CustomField>