force-app/main/default/objects/Country_Save_State__c/fields/Domestic_supply_pool__c.field-meta.xml
<CustomField>
    <fullName>Domestic_supply_pool__c</fullName>
    <label>Domestic supply pool</label>
    <type>Lookup</type>
    <referenceTo>Domestic_supply_pool__c</referenceTo>
    <relationshipName>Country_Save_State_Domestic_supply_pool</relationshipName>
</CustomField>