force-app/main/default/objects/Country_Save_State__c/fields/Education_reform__c.field-meta.xml
<CustomField>
    <fullName>Education_reform__c</fullName>
    <label>Education reform</label>
    <type>Text</type>
    <length>255</length>
</CustomField>