force-app/main/default/objects/Country_Save_State__c/fields/Election__c.field-meta.xml
<CustomField>
    <fullName>Election__c</fullName>
    <label>Election</label>
    <type>Text</type>
    <length>255</length>
</CustomField>