force-app/main/default/objects/Country_Save_State__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <label>Expenses</label>
    <type>Lookup</type>
    <referenceTo>Expenses__c</referenceTo>
    <relationshipName>Country_Save_State_Expenses</relationshipName>
</CustomField>