force-app/main/default/objects/Country_Save_State__c/fields/Finance_reform__c.field-meta.xml
<CustomField>
    <fullName>Finance_reform__c</fullName>
    <label>Finance reform</label>
    <type>Text</type>
    <length>255</length>
</CustomField>