force-app/main/default/objects/Country_Save_State__c/fields/Flags__c.field-meta.xml
<CustomField>
    <fullName>Flags__c</fullName>
    <label>Flags</label>
    <type>Lookup</type>
    <referenceTo>Flag__c</referenceTo>
    <relationshipName>Country_Save_State_Flags</relationshipName>
</CustomField>