force-app/main/default/objects/Country_Save_State__c/fields/Foreign_investment__c.field-meta.xml
<CustomField>
    <fullName>Foreign_investment__c</fullName>
    <label>Foreign investment</label>
    <type>Lookup</type>
    <referenceTo>Foreign_investment__c</referenceTo>
    <relationshipName>Country_Save_State_Foreign_investment</relationshipName>
</CustomField>