force-app/main/default/objects/Country_Save_State__c/fields/Foreign_naval_officers__c.field-meta.xml
<CustomField>
    <fullName>Foreign_naval_officers__c</fullName>
    <label>Foreign naval officers</label>
    <type>Text</type>
    <length>255</length>
</CustomField>