force-app/main/default/objects/Country_Save_State__c/fields/Foreign_navies__c.field-meta.xml
<CustomField>
    <fullName>Foreign_navies__c</fullName>
    <label>Foreign navies</label>
    <type>Text</type>
    <length>255</length>
</CustomField>