force-app/main/default/objects/Country_Save_State__c/fields/Foreign_training__c.field-meta.xml
<CustomField>
    <fullName>Foreign_training__c</fullName>
    <label>Foreign training</label>
    <type>Text</type>
    <length>255</length>
</CustomField>