force-app/main/default/objects/Country_Save_State__c/fields/Foreign_weapons__c.field-meta.xml
<CustomField>
    <fullName>Foreign_weapons__c</fullName>
    <label>Foreign weapons</label>
    <type>Text</type>
    <length>255</length>
</CustomField>