force-app/main/default/objects/Country_Save_State__c/fields/Government_flag__c.field-meta.xml
<CustomField>
    <fullName>Government_flag__c</fullName>
    <label>Government flag</label>
    <type>Lookup</type>
    <referenceTo>GovernmentFlag__c</referenceTo>
    <relationshipName>Country_Save_State_Government_flag</relationshipName>
</CustomField>