force-app/main/default/objects/Country_Save_State__c/fields/Health_care__c.field-meta.xml
<CustomField>
    <fullName>Health_care__c</fullName>
    <label>Health care</label>
    <type>Text</type>
    <length>255</length>
</CustomField>