force-app/main/default/objects/Country_Save_State__c/fields/Human__c.field-meta.xml
<CustomField>
    <fullName>Human__c</fullName>
    <label>Human</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>