force-app/main/default/objects/Country_Save_State__c/fields/Illegal_inventions__c.field-meta.xml
<CustomField>
    <fullName>Illegal_inventions__c</fullName>
    <label>Illegal inventions</label>
    <type>Lookup</type>
    <referenceTo>IllegalInvention__c</referenceTo>
    <relationshipName>Country_Save_State_Illegal_inventions</relationshipName>
</CustomField>