force-app/main/default/objects/Country_Save_State__c/fields/Incomes__c.field-meta.xml
<CustomField>
    <fullName>Incomes__c</fullName>
    <label>Incomes</label>
    <type>Lookup</type>
    <referenceTo>Incomes__c</referenceTo>
    <relationshipName>Country_Save_State_Incomes</relationshipName>
</CustomField>