force-app/main/default/objects/Country_Save_State__c/fields/Industrial_construction__c.field-meta.xml
<CustomField>
    <fullName>Industrial_construction__c</fullName>
    <label>Industrial construction</label>
    <type>Text</type>
    <length>255</length>
</CustomField>