force-app/main/default/objects/Country_Save_State__c/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <label>Influence</label>
    <type>Lookup</type>
    <referenceTo>Influence__c</referenceTo>
    <relationshipName>Country_Save_State_Influence</relationshipName>
</CustomField>