force-app/main/default/objects/Country_Save_State__c/fields/Influence_overflow__c.field-meta.xml
<CustomField>
    <fullName>Influence_overflow__c</fullName>
    <label>Influence overflow</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>