force-app/main/default/objects/Country_Save_State__c/fields/Influence_value__c.field-meta.xml
<CustomField>
    <fullName>Influence_value__c</fullName>
    <label>Influence value</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>