force-app/main/default/objects/Country_Save_State__c/fields/Interesting_countries__c.field-meta.xml
<CustomField>
    <fullName>Interesting_countries__c</fullName>
    <label>Interesting countries</label>
    <type>Lookup</type>
    <referenceTo>InterestingCountrie__c</referenceTo>
    <relationshipName>Country_Save_State_Interesting_countries</relationshipName>
</CustomField>