force-app/main/default/objects/Country_Save_State__c/fields/Is_releasable_vassal__c.field-meta.xml
<CustomField>
    <fullName>Is_releasable_vassal__c</fullName>
    <label>Is releasable vassal</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>