force-app/main/default/objects/Country_Save_State__c/fields/Land_reform__c.field-meta.xml
<CustomField>
    <fullName>Land_reform__c</fullName>
    <label>Land reform</label>
    <type>Text</type>
    <length>255</length>
</CustomField>