force-app/main/default/objects/Country_Save_State__c/fields/Last_bankrupt__c.field-meta.xml
<CustomField>
    <fullName>Last_bankrupt__c</fullName>
    <label>Last bankrupt</label>
    <type>Text</type>
    <length>255</length>
</CustomField>