force-app/main/default/objects/Country_Save_State__c/fields/Last_election__c.field-meta.xml
<CustomField>
    <fullName>Last_election__c</fullName>
    <label>Last election</label>
    <type>Text</type>
    <length>255</length>
</CustomField>