force-app/main/default/objects/Country_Save_State__c/fields/Last_greatness_date__c.field-meta.xml
<CustomField>
    <fullName>Last_greatness_date__c</fullName>
    <label>Last greatness date</label>
    <type>Text</type>
    <length>255</length>
</CustomField>