force-app/main/default/objects/Country_Save_State__c/fields/Last_lost_war__c.field-meta.xml
<CustomField>
    <fullName>Last_lost_war__c</fullName>
    <label>Last lost war</label>
    <type>Text</type>
    <length>255</length>
</CustomField>