force-app/main/default/objects/Country_Save_State__c/fields/Last_mission_cancel__c.field-meta.xml
<CustomField>
    <fullName>Last_mission_cancel__c</fullName>
    <label>Last mission cancel</label>
    <type>Text</type>
    <length>255</length>
</CustomField>