force-app/main/default/objects/Country_Save_State__c/fields/Last_reform__c.field-meta.xml
<CustomField>
    <fullName>Last_reform__c</fullName>
    <label>Last reform</label>
    <type>Text</type>
    <length>255</length>
</CustomField>