force-app/main/default/objects/Country_Save_State__c/fields/Last_send_diplomat__c.field-meta.xml
<CustomField>
    <fullName>Last_send_diplomat__c</fullName>
    <label>Last send diplomat</label>
    <type>Text</type>
    <length>255</length>
</CustomField>