force-app/main/default/objects/Country_Save_State__c/fields/Leader__c.field-meta.xml
<CustomField>
    <fullName>Leader__c</fullName>
    <label>Leader</label>
    <type>Lookup</type>
    <referenceTo>Leader__c</referenceTo>
    <relationshipName>Country_Save_State_Leader</relationshipName>
</CustomField>