force-app/main/default/objects/Country_Save_State__c/fields/Leadership__c.field-meta.xml
<CustomField>
    <fullName>Leadership__c</fullName>
    <label>Leadership</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>