force-app/main/default/objects/Country_Save_State__c/fields/Level_changed_date__c.field-meta.xml
<CustomField>
    <fullName>Level_changed_date__c</fullName>
    <label>Level changed date</label>
    <type>Text</type>
    <length>255</length>
</CustomField>