force-app/main/default/objects/Country_Save_State__c/fields/Max_bought__c.field-meta.xml
<CustomField>
    <fullName>Max_bought__c</fullName>
    <label>Max bought</label>
    <type>Lookup</type>
    <referenceTo>MaxBought__c</referenceTo>
    <relationshipName>Country_Save_State_Max_bought</relationshipName>
</CustomField>