force-app/main/default/objects/Country_Save_State__c/fields/Max_tariff__c.field-meta.xml
<CustomField>
    <fullName>Max_tariff__c</fullName>
    <label>Max tariff</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>