force-app/main/default/objects/Country_Save_State__c/fields/Middle_tax__c.field-meta.xml
<CustomField>
    <fullName>Middle_tax__c</fullName>
    <label>Middle tax</label>
    <type>Lookup</type>
    <referenceTo>Middle_tax__c</referenceTo>
    <relationshipName>Country_Save_State_Middle_tax</relationshipName>
</CustomField>