force-app/main/default/objects/Country_Save_State__c/fields/Military_access__c.field-meta.xml
<CustomField>
    <fullName>Military_access__c</fullName>
    <label>Military access</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>