force-app/main/default/objects/Country_Save_State__c/fields/Military_constructions__c.field-meta.xml
<CustomField>
    <fullName>Military_constructions__c</fullName>
    <label>Military constructions</label>
    <type>Text</type>
    <length>255</length>
</CustomField>