force-app/main/default/objects/Country_Save_State__c/fields/Mobilize__c.field-meta.xml
<CustomField>
    <fullName>Mobilize__c</fullName>
    <label>Mobilize</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>