force-app/main/default/objects/Country_Save_State__c/fields/Modifier__c.field-meta.xml
<CustomField>
    <fullName>Modifier__c</fullName>
    <label>Modifier</label>
    <type>Lookup</type>
    <referenceTo>Modifier__c</referenceTo>
    <relationshipName>Country_Save_State_Modifier</relationshipName>
</CustomField>