force-app/main/default/objects/Country_Save_State__c/fields/Movement__c.field-meta.xml
<CustomField>
    <fullName>Movement__c</fullName>
    <label>Movement</label>
    <type>Lookup</type>
    <referenceTo>Movement__c</referenceTo>
    <relationshipName>Country_Save_State_Movement</relationshipName>
</CustomField>