force-app/main/default/objects/Country_Save_State__c/fields/National_focus__c.field-meta.xml
<CustomField>
    <fullName>National_focus__c</fullName>
    <label>National focus</label>
    <type>Lookup</type>
    <referenceTo>NationalFocu__c</referenceTo>
    <relationshipName>Country_Save_State_National_focus</relationshipName>
</CustomField>