force-app/main/default/objects/Country_Save_State__c/fields/Nationalvalue__c.field-meta.xml
<CustomField>
    <fullName>Nationalvalue__c</fullName>
    <label>Nationalvalue</label>
    <type>Text</type>
    <length>255</length>
</CustomField>