force-app/main/default/objects/Country_Save_State__c/fields/Naval_schools__c.field-meta.xml
<CustomField>
    <fullName>Naval_schools__c</fullName>
    <label>Naval schools</label>
    <type>Text</type>
    <length>255</length>
</CustomField>