force-app/main/default/objects/Country_Save_State__c/fields/Navy__c.field-meta.xml
<CustomField>
    <fullName>Navy__c</fullName>
    <label>Navy</label>
    <type>Lookup</type>
    <referenceTo>Navy__c</referenceTo>
    <relationshipName>Country_Save_State_Navy</relationshipName>
</CustomField>