force-app/main/default/objects/Country_Save_State__c/fields/Next_quarterly_pulse__c.field-meta.xml
<CustomField>
    <fullName>Next_quarterly_pulse__c</fullName>
    <label>Next quarterly pulse</label>
    <type>Text</type>
    <length>255</length>
</CustomField>