force-app/main/default/objects/Country_Save_State__c/fields/Overseas_penalty__c.field-meta.xml
<CustomField>
    <fullName>Overseas_penalty__c</fullName>
    <label>Overseas penalty</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>