force-app/main/default/objects/Country_Save_State__c/fields/Pensions__c.field-meta.xml
<CustomField>
    <fullName>Pensions__c</fullName>
    <label>Pensions</label>
    <type>Text</type>
    <length>255</length>
</CustomField>