force-app/main/default/objects/Country_Save_State__c/fields/Plurality__c.field-meta.xml
<CustomField>
    <fullName>Plurality__c</fullName>
    <label>Plurality</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>