force-app/main/default/objects/Country_Save_State__c/fields/Political_parties__c.field-meta.xml
<CustomField>
    <fullName>Political_parties__c</fullName>
    <label>Political parties</label>
    <type>Text</type>
    <length>255</length>
</CustomField>