force-app/main/default/objects/Country_Save_State__c/fields/Poor_tax__c.field-meta.xml
<CustomField>
    <fullName>Poor_tax__c</fullName>
    <label>Poor tax</label>
    <type>Lookup</type>
    <referenceTo>Poor_tax__c</referenceTo>
    <relationshipName>Country_Save_State_Poor_tax</relationshipName>
</CustomField>