force-app/main/default/objects/Country_Save_State__c/fields/Possible_inventions__c.field-meta.xml
<CustomField>
    <fullName>Possible_inventions__c</fullName>
    <label>Possible inventions</label>
    <type>Lookup</type>
    <referenceTo>PossibleInvention__c</referenceTo>
    <relationshipName>Country_Save_State_Possible_inventions</relationshipName>
</CustomField>