force-app/main/default/objects/Country_Save_State__c/fields/Pre_indust__c.field-meta.xml
<CustomField>
    <fullName>Pre_indust__c</fullName>
    <label>Pre indust</label>
    <type>Text</type>
    <length>255</length>
</CustomField>