force-app/main/default/objects/Country_Save_State__c/fields/Press_rights__c.field-meta.xml
<CustomField>
    <fullName>Press_rights__c</fullName>
    <label>Press rights</label>
    <type>Text</type>
    <length>255</length>
</CustomField>