force-app/main/default/objects/Country_Save_State__c/fields/Primary_culture__c.field-meta.xml
<CustomField>
    <fullName>Primary_culture__c</fullName>
    <label>Primary culture</label>
    <type>Text</type>
    <length>255</length>
</CustomField>