force-app/main/default/objects/Country_Save_State__c/fields/Public_meetings__c.field-meta.xml
<CustomField>
    <fullName>Public_meetings__c</fullName>
    <label>Public meetings</label>
    <type>Text</type>
    <length>255</length>
</CustomField>