force-app/main/default/objects/Country_Save_State__c/fields/Railroads__c.field-meta.xml
<CustomField>
    <fullName>Railroads__c</fullName>
    <label>Railroads</label>
    <type>Lookup</type>
    <referenceTo>Railroad__c</referenceTo>
    <relationshipName>Country_Save_State_Railroads</relationshipName>
</CustomField>