force-app/main/default/objects/Country_Save_State__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <label>Research</label>
    <type>Lookup</type>
    <referenceTo>Research__c</referenceTo>
    <relationshipName>Country_Save_State_Research</relationshipName>
</CustomField>