force-app/main/default/objects/Country_Save_State__c/fields/Revanchism__c.field-meta.xml
<CustomField>
    <fullName>Revanchism__c</fullName>
    <label>Revanchism</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>