force-app/main/default/objects/Country_Save_State__c/fields/Rich_tax__c.field-meta.xml
<CustomField>
    <fullName>Rich_tax__c</fullName>
    <label>Rich tax</label>
    <type>Lookup</type>
    <referenceTo>RichTax__c</referenceTo>
    <relationshipName>Country_Save_State_Rich_tax</relationshipName>
</CustomField>