force-app/main/default/objects/Country_Save_State__c/fields/Ruling_party__c.field-meta.xml
<CustomField>
    <fullName>Ruling_party__c</fullName>
    <label>Ruling party</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>