force-app/main/default/objects/Country_Save_State__c/fields/Safety_regulations__c.field-meta.xml
<CustomField>
    <fullName>Safety_regulations__c</fullName>
    <label>Safety regulations</label>
    <type>Text</type>
    <length>255</length>
</CustomField>