force-app/main/default/objects/Country_Save_State__c/fields/Saved_country_supply__c.field-meta.xml
<CustomField>
    <fullName>Saved_country_supply__c</fullName>
    <label>Saved country supply</label>
    <type>Lookup</type>
    <referenceTo>SavedCountrySupply__c</referenceTo>
    <relationshipName>Country_Save_State_Saved_country_supply</relationshipName>
</CustomField>