force-app/main/default/objects/Country_Save_State__c/fields/School_reforms__c.field-meta.xml
<CustomField>
    <fullName>School_reforms__c</fullName>
    <label>School reforms</label>
    <type>Text</type>
    <length>255</length>
</CustomField>