force-app/main/default/objects/Country_Save_State__c/fields/Schools__c.field-meta.xml
<CustomField>
    <fullName>Schools__c</fullName>
    <label>Schools</label>
    <type>Text</type>
    <length>255</length>
</CustomField>