force-app/main/default/objects/Country_Save_State__c/fields/Slavery__c.field-meta.xml
<CustomField>
    <fullName>Slavery__c</fullName>
    <label>Slavery</label>
    <type>Text</type>
    <length>255</length>
</CustomField>