force-app/main/default/objects/Country_Save_State__c/fields/Sold_supply_pool__c.field-meta.xml
<CustomField>
    <fullName>Sold_supply_pool__c</fullName>
    <label>Sold supply pool</label>
    <type>Lookup</type>
    <referenceTo>SoldSupplyPool__c</referenceTo>
    <relationshipName>Country_Save_State_Sold_supply_pool</relationshipName>
</CustomField>