force-app/main/default/objects/Country_Save_State__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Lookup</type>
    <referenceTo>State_Save_State__c</referenceTo>
    <relationshipName>Country_Save_State_State</relationshipName>
</CustomField>