force-app/main/default/objects/Country_Save_State__c/fields/Suppression__c.field-meta.xml
<CustomField>
    <fullName>Suppression__c</fullName>
    <label>Suppression</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>