force-app/main/default/objects/Country_Save_State__c/fields/Tariffs__c.field-meta.xml
<CustomField>
    <fullName>Tariffs__c</fullName>
    <label>Tariffs</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>