force-app/main/default/objects/Country_Save_State__c/fields/Tax_base__c.field-meta.xml
<CustomField>
    <fullName>Tax_base__c</fullName>
    <label>Tax base</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>