force-app/main/default/objects/Country_Save_State__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Lookup</type>
    <referenceTo>Technology__c</referenceTo>
    <relationshipName>Country_Save_State_Technology</relationshipName>
</CustomField>