force-app/main/default/objects/Country_Save_State__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <label>Trade</label>
    <type>Lookup</type>
    <referenceTo>Trade__c</referenceTo>
    <relationshipName>Country_Save_State_Trade</relationshipName>
</CustomField>