force-app/main/default/objects/Country_Save_State__c/fields/Trade_cap_naval__c.field-meta.xml
<CustomField>
    <fullName>Trade_cap_naval__c</fullName>
    <label>Trade cap naval</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>