force-app/main/default/objects/Country_Save_State__c/fields/Trade_unions__c.field-meta.xml
<CustomField>
    <fullName>Trade_unions__c</fullName>
    <label>Trade unions</label>
    <type>Text</type>
    <length>255</length>
</CustomField>