force-app/main/default/objects/Country_Save_State__c/fields/Transport_improv__c.field-meta.xml
<CustomField>
    <fullName>Transport_improv__c</fullName>
    <label>Transport improv</label>
    <type>Text</type>
    <length>255</length>
</CustomField>