force-app/main/default/objects/Country_Save_State__c/fields/Truce_until__c.field-meta.xml
<CustomField>
    <fullName>Truce_until__c</fullName>
    <label>Truce until</label>
    <type>Text</type>
    <length>255</length>
</CustomField>