force-app/main/default/objects/Country_Save_State__c/fields/Unemployment_subsidies__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_subsidies__c</fullName>
    <label>Unemployment subsidies</label>
    <type>Text</type>
    <length>255</length>
</CustomField>