force-app/main/default/objects/Country_Save_State__c/fields/Upper_house__c.field-meta.xml
<CustomField>
    <fullName>Upper_house__c</fullName>
    <label>Upper house</label>
    <type>Lookup</type>
    <referenceTo>Upper_house__c</referenceTo>
    <relationshipName>Country_Save_State_Upper_house</relationshipName>
</CustomField>