force-app/main/default/objects/Country_Save_State__c/fields/Upper_house_composition__c.field-meta.xml
<CustomField>
    <fullName>Upper_house_composition__c</fullName>
    <label>Upper house composition</label>
    <type>Text</type>
    <length>255</length>
</CustomField>