force-app/main/default/objects/Country_Save_State__c/fields/Variables__c.field-meta.xml
<CustomField>
    <fullName>Variables__c</fullName>
    <label>Variables</label>
    <type>Lookup</type>
    <referenceTo>Variables__c</referenceTo>
    <relationshipName>Country_Save_State_Variables</relationshipName>
</CustomField>