force-app/main/default/objects/Country_Save_State__c/fields/Vote_franschise__c.field-meta.xml
<CustomField>
    <fullName>Vote_franschise__c</fullName>
    <label>Vote franschise</label>
    <type>Text</type>
    <length>255</length>
</CustomField>