force-app/main/default/objects/Country_Save_State__c/fields/Voting_system__c.field-meta.xml
<CustomField>
    <fullName>Voting_system__c</fullName>
    <label>Voting system</label>
    <type>Text</type>
    <length>255</length>
</CustomField>