force-app/main/default/objects/Country_Save_State__c/fields/Wage_reform__c.field-meta.xml
<CustomField>
    <fullName>Wage_reform__c</fullName>
    <label>Wage reform</label>
    <type>Text</type>
    <length>255</length>
</CustomField>