force-app/main/default/objects/Country_Save_State__c/fields/War_exhaustion__c.field-meta.xml
<CustomField>
    <fullName>War_exhaustion__c</fullName>
    <label>War exhaustion</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>