force-app/main/default/objects/Country_Save_State__c/fields/Work_hours__c.field-meta.xml
<CustomField>
    <fullName>Work_hours__c</fullName>
    <label>Work hours</label>
    <type>Text</type>
    <length>255</length>
</CustomField>